fixing white space

--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -10,10 +10,6 @@ header {
     z-index: 1;
   }
   
-header div {
-    padding-top: 50px;
-  
-  }
   
   header div h1 {
     font-size: 55px;
@@ -33,11 +29,11 @@ header div {
   }
   
   header div a {
-    padding: 20px;
+    padding: 5px;
     display: block;
-    margin-top: 70px;
-    width: 170px;
-    border-radius: 40px;
+    margin-top: 30px;
+    width: 110px;
+    border-radius: 10px;
     color: #eee;
     font-size: 20px;
     text-align: center;
@@ -46,7 +42,7 @@ header div {
   
   header div a,
   .newsletter input[type="submit"] {
-    border: 1px solid blue;
+    border: .001px solid blue;
     color: blue;
   }
 @media screen and (max-width: 1600px) {
